博客列表分页

--- a/public/views/blogs.detail.html
+++ b/public/views/blogs.detail.html
@@ -1,8 +1,15 @@
 <div class="content md-text" ng-controller="BlogDetailCtrl" ng-init="detail()"  onload="prettyPrint()">
     <div layout="column" layout-padding layout-wrap layout-fill style="padding-bottom: 32px;" ng-cloak>
-        <h2 class="blog-title">{{blog.name}}</h2>
+        <div layout="row">
+        <h2 flex="70" class="blog-title">{{blog.name}}</h2>
+        <h4 flex="30" class="blog-post-time">post at:{{blog.create_time}}</h4>
+        </div>
         <hr>
-        <h4 class="blog-post-time">post at:{{blog.create_time}}</h4>
+        <div layout="row">
+            <h4>分类 : <a href="">{{blog.catalog}}</a></h4>
+            
+        </div>
         <div ng-bind-html="blog.content | trustHtml "></div>
+        
     </div>
 </div>
