--- a/public/views/blogs.html
+++ b/public/views/blogs.html
@@ -24,5 +24,10 @@
             </md-list-item>
             </md-list>
         </div>
+        <div layout="row"  layout-align="center center" class="pagination">
+            <md-button ng-disabled="!pagination.hasPrePage"  ng-click="prePage()">上一页</md-button>
+            <md-button ng-disabled="true">{{pagination.page}}</md-button>
+            <md-button ng-disabled="!pagination.hasNextPage" ng-click="nextPage()">下一页</md-button>
+        </div>
     </div>
 </div>
