修改获取文章逻辑；修改样式中图片样式；添加关于我页面

--- a/public/stylesheets/src/style.less
+++ b/public/stylesheets/src/style.less
@@ -170,4 +170,8 @@ a {
         padding-top: 20px;
         margin-bottom: -20px;
     }
+    img{
+        max-width: 100%;
+        height: auto;
+    }
 }
