--- a/public/views/blogs.html
+++ b/public/views/blogs.html
@@ -18,7 +18,7 @@
             <div class="md-list-item-text" layout="column">
                 <a ui-sref="blogs-detail({id:'{{blog._id}}'})"><h2 class="blog-list-item-title">{{ blog.name }}</h2></a>
                 <md-divider ></md-divider>
-                <h4 class="blog-list-item-time">{{ blog.create_time }}</h4>
+                <h4 class="blog-list-item-time">发表于：{{ blog.create_time | date:'yyyy-MM-dd HH:mm:ss' }}|分类：{{blog.catalog}}</h4>
                 <p class="blog-list-item-content">{{ blog.subcontent }}</p>
             </div>
             </md-list-item>
@@ -26,7 +26,7 @@
         </div>
         <div layout="row"  layout-align="center center" class="pagination">
             <md-button ng-disabled="!pagination.hasPrePage"  ng-click="prePage()">上一页</md-button>
-            <md-button ng-disabled="true">{{pagination.page}}</md-button>
+            <md-button ng-disabled="true">{{pagination.page}}/{{pagination.totalPages}}</md-button>
             <md-button ng-disabled="!pagination.hasNextPage" ng-click="nextPage()">下一页</md-button>
         </div>
     </div>
