--- a/public/views/blogs.detail.html
+++ b/public/views/blogs.detail.html
@@ -10,7 +10,7 @@
                 <h4>分类 : <a href="/#/blogs?tag={{blog.catalog}}">{{blog.catalog}}</a></h4>
                 
             </div>
-            <div ng-bind-html="blog.content | trustHtml "></div>
+            <div ng-bind-html="blog.content | trustHtml " style="width:100%;"></div>
             
         </div>
     </md-card>
