--- a/public/stylesheets/src/style.less
+++ b/public/stylesheets/src/style.less
@@ -90,8 +90,23 @@ a {
         margin-top: 30px;
         position: static;
     }
+    .time_catalog_separate{
+        margin-left: 20px;
+        margin-right: 20px;
+    }
 }
-
+.tag1{
+    margin-left: 20px;
+    color: #555;
+}
+.tag2{
+    margin-left: 40px;
+    color: #888;
+}
+.tag3{
+    margin-left: 60px;
+    color: #aaa;
+}
 .md-text{
     margin-left: 15px;
     margin-right: 15px;
@@ -174,4 +189,5 @@ a {
         max-width: 100%;
         height: auto;
     }
+    
 }
